--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    </nav>
 
 
-   <div class="container py-5">
+   <div class="container py-5 animate__animated animate__flash">
      <h1>Test</h1>
      <a class="btn btn-primary" href="#" role="button">Link</a>
      <button class="btn btn-primary">Button</button>
